# Lang

./: .env.backup  .gitignore  AGENTS.md  AUDIT-CODE.md  CLAUDE.md  CODEBASE_REVIEW.md  DATA_FLOW.md  EXTENSIBLE_GENERATION_ARCHITECTURE.md  LLM_CONFIG_TRANSITION.md  PLAN.md  README.md  REFACTOR_SUMMARY.md  SYSTEMATIC_FIX_PLAN.md  TIERS.md  TODO.md  TODO_PLAN.md  WORD_LIST_FIX_STATUS.md  debug_real_text_gen.py  debug_text_gen.py  gen_queue_idea.py  notes.md  package-lock.json  package.json  pyproject.toml  reset_db.py  run.sh  run_tests.sh  test_target_lang_removal.py  vite.config.ts
.claude/: settings.local.json
Lang/parsing/: __init__.py  base.py  es.py  morph_format.py  zh.py
Lang/parsing/dicts/: __init__.py  cedict.py  provider.py
Lang/tokenize/: latin.py  registry.py  zh.py
arcadia_lang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
archive/parsing_translation/: README.md  parse.py  translation.py
data/: app.db-shm  app.db-wal  app.db.backup
dev-tools/: test_new_flow.py  test_session_manager.py
docs/: language-pipeline.md
frontend/: index.html  main.ts
langs/: __init__.py
langs/dicts/: __init__.py
langs/parsing/: __init__.py
langs/tokenize/: __init__.py
logic/: __init__.py  srs.py
nlp/: __init__.py
nlp/parsing/: __init__.py
nlp/tokenize/: base.py
scripts/: backfill_glosses.py  import_hsk_levels.py  import_wiktionary_mandarin_freq.py  test_level_smoke.py
server/: account_db.py  auth.py  config.py  db.py  deps.py  enums.py  level.py  llm.py  main.py  middleware.py  models.py  schemas.py  settings.py
server/api/: profile.py  tiers.py  wordlists.py
server/auth/: __init__.py  auth_utils.py  middleware.py  models.py  policy.py  repo.py  router.py  schemas.py  security.py  sqlite_repo.py
server/auth/adapters/: __init__.py  (+1 more)
server/llm/: __init__.py  client.py  models.json  models.py  prompts.py
server/llm_config/: llm_models.json  llm_models.py
server/middleware/: auth.py  rate_limit.py
server/migrations/: add_queue_dirty_fields.py
server/models/: __init__.py  auth.py  llm.py  reading.py  srs.py
server/prompts/: reading_system.txt  reading_user.txt  structured_translation_system.txt  structured_translation_user.txt  translation_system_xml.txt  word_translation_system.txt  word_translation_user.txt
server/repos/: profiles.py  tiers.py
server/routes/: admin.py  health.py  lookup.py  pages.py  reading.py  reading_text_log.py  settings.py  srs.py  tiers.py  ui.py  user.py  user_models.py
server/schemas/: reading.py  session.py
server/services/: background_worker.py  content.py  gen_queue.py  generation_controller.py  generation_orchestrator.py  global_frequency.py  interests_parser.py  learning.py  learning.py.bak  level_service.py  lexeme_service.py  llm_common.py  llm_logging.py  llm_service.py  model_registry_service.py  model_resolution.py  notification_service.py  openrouter_key_service.py  openrouter_provisioning.py  pool_selection_service.py  progress_service.py  rating.py  readiness_service.py  reading.py  reading_view_service.py  recommendation.py  reconstruction_service.py  retry_actions.py  retry_service.py  selection_service.py  session_management_service.py  session_processing_service.py  srs.py  srs_algorithm.py  srs_logic.py  srs_service.py  sse_handlers.py  startup_service.py  state_manager.py  system.py  (+12 more)
server/static/: app.js  arcadia.css  arcadia_theme.css  context-menu.css  context-menu.js  reading-context.js  reading-controller.js  reading-sse.js  reading-state.js  reading-utils.js  reading.js
server/templates/: _header.html  login.html  profile.html  settings.html  signup.html  stats.html  words.html
server/utils/: add_paragraphs_to_states.py  backfill_full_translation.py  backfill_global_frequency.py  common.py  exceptions.py  file_lock.py  gloss.py  initialize_srs.py  json_parser.py  llm_validation.py  math_utils.py  migrate_text_states.py  migrations.py  nlp.py  seed_demo_texts.py  session_manager.py  text_segmentation.py
server/views/: reading_renderer.py
tests/: PARETO_SUMMARY.md  __init__.py  conftest.py  conftest_old.py  sse.py  test_auth.py  test_auth_flow.py  test_background_worker.py  test_db_flows.py  test_flows.py  test_full_generation_flow.py  test_integration.py  test_llm_generation.py  test_parsing.py  test_recommendation.py  test_session_tracking.py  test_simple.py  test_simple_integration.py  test_srs_words.py  test_startup.py
tests/assets/: README.md  messy_json_with_fences.txt  partial_json_response.txt  xml_wrapped_response.txt
tests/auth/: __init__.py  test_deps.py  test_models.py
tests/conftest/: conftest.py
tests/integration/: __init__.py  test_db_flows.py  test_db_to_ui_flow.py  test_e2e_translation_flow.py  test_llm_pipeline_persistence.py  test_next_button_state.py  test_reading_flow.py  test_srs_workflow.py
tests/services/: test_notification_sse_min.py
tests/unit/: __init__.py
(+60 files in other folders)
