 [project]
 name = "arcadia-lang"
 version = "0.1.0"
 description = "Click-to-translate web app (Spanish first) with pluggable language parsing and dictionary providers"
 requires-python = ">=3.10"
 dependencies = [
   "fastapi>=0.110",
   "uvicorn[standard]>=0.23",
   "pydantic>=2.5",
   "jinja2>=3.0.0",
   "pystardict>=0.3.1",
   "regex>=2024.7.24",
   "SQLAlchemy>=2.0.32",
   "argon2-cffi>=23.1.0",
   "simplemma>=0.9.1",
   "beautifulsoup4>=4.12.3",
   "jieba>=0.42.1",
   "pypinyin>=0.50.0",
   "opencc-python-reimplemented>=0.1.7",
   "httpx>=0.20.0",
   "markupsafe>=2.0.0",
   # vendored auth
   "passlib>=1.7.4",
   "python-jose>=3.3.0",
   "ruff>=0.6.0",
   "requests>=2.32.5",
]

 [project.optional-dependencies]
 # Optional heavy deps; not required for minimal MVP run
 nlp = [
   "spacy<4",
   # Spanish model install is a separate step; left to the user/environment
 ]
dicts = [
  "pystardict>=0.3.1"
]
zh = [
  "jieba>=0.42.1",
  "pypinyin>=0.50.0",
  "opencc-python-reimplemented>=0.1.7"
]

 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { include = ["Lang*", "server*" ] } }

[tool.uv]
managed = true
[tool.uv.scripts]
serve = "uvicorn server.main:app --reload --port 8000"

## UI is now self-contained - no external libs needed
## local auth is vendored under server/auth
